// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

12/21/2009
	r66 [Jobbie]
	* Fixed an issue in battle_attr_fix causing map-server to crash.

	r64 [pakpil]
	* Initialized Shadow Chaser's skills implementation. Started with SC_TRIANGLESHOT.

12/19/2009
	r61 [Jobbie]
	* Implemented renewal cast time settings to enable fixed and variable cast time.
	* Renovatio's cast time is not affected by dex.
	* Sacrament( fixed cast time reduced ) and Freezing( fixed cast time increased ) are now functional.
	* Fixed the AfterCastDelay? which is not showing the paw icon and did not trigger after cast delay of skill.

	r60 [Jobbie]
	* Added RA_WUGDASH and RA_RESEARCHTRAP skill.
	* Fixed electric shocker and cluster bomb their unit must not affected by arrow shower.
	* Fixed usable skills while riding a warg.

12/13/2009
	r54 [Jobbie]
	* Quick fixed while merging with latest eA update something messed up.
	
	r53 [Jobbie]
	* Merge eAthena Updates upto r14198

11/29/2009
	r40 [Jobbie]
	* Added Ranger Trap only related skills.
	- Changes:
		* Icebound and Firing Trap deals neutral damage to enemy based on official info.
		* Clusterbomb is a MiSC type of attack same to Icebound and Firing Trap.
		* Applied Clusterbomb, Firing, Icebound damage formula based of official info from iROwiki.
	* Added a commented missed OPT_BURNING display icon implementation. 

11/28/2009
	r39 [Jobbie]
	* Added GN_REMODELING_CART cart weight bonus which is missed during implementation on r33.
	* Follow up implementation for GN_TRAINING_SWORD for its bonus hitrate. Follow up r33.
	* Switch packet_db to default and mmo.h to RagRE compatible so that RagexeRE client will be allowed.

11/26/2009
	r36 [LimitLine]
	* Updated Sorcerer cast times, cooldowns and aftercast delays according to http://forums.irowiki.org/showpost.php?p=559786&postcount=437 .
	* Next, I'll update their behaviors and other things I left out.

	r35 [LimitLine]