@@ -66,9 +66,11 @@ Job: Equippable jobs. Uses the following bitmask table:
 	Ninja       (2^25): 0x02000000
 
 Upper: Equippable upper-types. Uses the following bitmasks:
-	1: Normal jobs
-	2: Upper jobs
-	4: Baby jobs
+	 1: Normal jobs
+	 2: Upper jobs
+	 4: Baby jobs
+	 8: Base Third jobs
+	16: Trans Third jobs
 
 Gender: Gender restriction. 0 is female, 1 is male, 2 for both.
 
