@@ -358,6 +358,19 @@ typedef enum sc_type {
 	SC_ELECTRICSHOCKER,
 	SC_WUGDASH,
 
+	SC__ENERVATION,
+	SC__GROOMY,
+	SC__IGNORANCE,
+	SC__LAZINESS,
+	SC__UNLUCKY,
+	SC__WEAKNESS,
+	SC__REPRODUCE,
+	SC__AUTOSHADOWSPELL,
+	SC__SHADOWFORM,
+	SC__BODYPAINT,
+	SC__INVISIBILITY,
+	SC__MANHOLE,
+
 	SC_GN_CARTBOOST,
 	SC_BLOODSUCKER,
 	SC_THORNSTRAP,
